fixed home page button getting too small'

--- a/public/style.css
+++ b/public/style.css
@@ -203,7 +203,7 @@ li {
 
 .homeContainer button {
   margin-top: 50px;
-  width: 14%;
+  width: 150px;
   text-align: center;
   display: flex;
   flex-flow: nowrap;
